--- a/choose-category.html
+++ b/choose-category.html
@@ -9,27 +9,23 @@
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="Assets/CSS/css.css">
 
-    <title>Trip Added</title>
+    <title>Choose Category</title>
 </head>
 
 <body>
     <header>
-        <button class="add-item-btn">
-            <span>Back</span>
-        </button>
+        <a href="Trip-List.html" button class="add-item-btn">
+            <span>x</span>
+        </a>
     </header>
-    <div class="jumbotron"> Next Trip</div>
-
-    <div class="jumbotron" id="advisor"> Trip Advisor sugesstions
-        <span>(carousel)</span>
-    </div>
+    <div class="jumbotron"> Choose Category</div>
 
 
     <div class="container">
         
         <div class="row" id="category-btn">
             <div class="col-xs-4 col-xs-offset-8">
-                <button type="button" class="btn-default">Create List</button>
+                <a href="Trip-List.html" role="button" type="button" class="btn-default">Next</a>
             </div>
         </div>
 
