--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <body>
 
     <header>
-        <button class="add-item-btn">+</button>
+        <a href="New-Trip-form.html" button class="add-item-btn" id="addTripBtn" role="button">+</a>
     </header>
 
     <!-- jumbotron -->
-   
-            <div class="jumbotron"> Next Trip</div>
 
-   
+    <div class="jumbotron"> Next Trip</div>
+
+
 
     <div class="container">
         <!-- div to push new divs of added trips -->
@@ -47,8 +47,10 @@
     </div>
     <div class="footer navbar-fixed-bottom" id="footer"> &copy A Teeny-Tiny Crabs Production 2018</div>
 
+    <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
 
-
+    <script type="text/javascript" src="wireframeUI.js"></script>
 </body>
 
 </html>
