--- a/Trip-List.html
+++ b/Trip-List.html
@@ -9,14 +9,14 @@
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="Assets/CSS/css.css">
 
-    <title>Trip Added</title>
+    <title>Trip List</title>
 </head>
 
 <body>
     <header>
-        <!-- <button class="add-item-btn">
+        <a href="index.html" button class="add-item-btn" role="button">
             <span>Back</span>
-        </button> -->
+        </a>
     </header>
     <div class="jumbotron"> Next Trip</div>
 
@@ -29,7 +29,7 @@
         
         <div class="row" id="category-btn">
             <div class="col-xs-4 col-xs-offset-8">
-                <button type="button" class="btn-default">Create List</button>
+                <a href="choose-category.html" button type="button" class="btn-default">+ Add Item</a>
             </div>
         </div>
 
