--- a/homepage.html
+++ b/homepage.html
@@ -30,6 +30,9 @@
     
 </div>
 
+<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+    <script type="text/javascript" src="assets/javascript/javascript.js"></script>
 </body>
 
 </html>
