--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             <input id="weatherSearch" type="submit" value="Weather Search"><br>
             <h3 id = "weatherInfo"> </h3>
             <h3 id = "weatherInfo2"> </h3>
+            <h3 id = "weatherInfo3"> </h3>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="main.js"></script>
         </body>
