--- a/New-Trip-form.html
+++ b/New-Trip-form.html
@@ -8,14 +8,16 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="Assets/CSS/css.css">
-    
+
     <title>New Trip Form</title>
 </head>
 
 <body>
-        <header>
-                <a href="index.html" button class="add-item-btn" id="cancelTripBtn" role="button"><span>Cancel</span></a>
-            </header>
+    <header>
+        <a href="index.html" button class="add-item-btn" id="cancelTripBtn" role="button">
+            <span>Cancel</span>
+        </a>
+    </header>
     <form>
         <h2> Add Trip</h2>
 
@@ -43,7 +45,7 @@
             <label for=inputDate> End Date:</label>
             <input type="date" class="form-control" id="end-date">
         </div>
-        <a href="Trip-List.html" button type="submit" class="btn btn-block" id="createTrip">Create Trip</a>
+        <button button type="submit" class="btn btn-block" id="createTripBtn">Create Trip</button>
     </form>
 
 
@@ -51,9 +53,11 @@
 
     </div>
     <div class="footer navbar-fixed-bottom" id="footer"> &copy A Teeny-Tiny Crabs Production 2018</div>
+
+
     <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
-    <script type="text/javascript" src="assets/javascript/javascript.js"></script>
+    <script type="text/javascript" src="assets/javascript/New-Trip-Form-javascript.js"></script>
 </body>
 
 </html>
