adds addTrip and renderTrips functions

--- a/choose-category.html
+++ b/choose-category.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <a href="Trip-List.html" button class="add-item-btn">
+        <a href="Pack-List.html" button class="add-item-btn">
             <span>x</span>
         </a>
     </header>
@@ -25,7 +25,7 @@
         
         <div class="row" id="category-btn">
             <div class="col-xs-4 col-xs-offset-8">
-                <a href="Trip-List.html" role="button" type="button" class="btn-default">Next</a>
+                <a href="Pack-List.html" role="button" type="button" class="btn-default">Next</a>
             </div>
         </div>
 
