adds click function to trip card to navigate to packing list page

--- a/Pack-List.html
+++ b/Pack-List.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="Assets/CSS/css.css">
 
-    <title>Trip List</title>
+    <title>Packing List</title>
 </head>
 
 <body>
