--- a/homepage.html
+++ b/homepage.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="Assets/CSS/css.css">
     <link href="https://fonts.googleapis.com/css?family=Pattaya" rel="stylesheet">
 
-    <title>Packing List</title>
+    <title>Get Started</title>
 </head>
 
 <body>
