--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="Assets/CSS/css.css">
 
-    <title>Packing List</title>
+    <title>My Trips</title>
 </head>
 
 <body>
