--- a/Pack-List.html
+++ b/Pack-List.html
@@ -26,19 +26,72 @@
 
 
     <div class="container">
-        
-        <div class="row" id="category-btn">
-            <div class="col-xs-4 col-xs-offset-8">
-                <a href="choose-category.html" button type="button" class="btn-default">+ Add Item</a>
+        <div class="row">
+            <div class="col-xs-12 input-group">
+                <input type="text" class="form-control" aria-label="..." id="item-input">
+                <div class="input-group-btn">
+                    <!-- Button and dropdown menu -->
+                    <!-- <button type="button" class="btn btn-default">Action</button> -->
+                    <button type="button" class="btn btn-default " data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Clothes
+                        <span class="caret"></span>
+                    </button>
+                    <button class="btn btn-primary" type="button" id="add-item">
+                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="#">Clothes</a>
+                        </li>
+                        <li role="separator" class="divider"></li>
+                        <li>
+                            <a href="#">Separated link</a>
+                        </li>
+                    </ul>
+                    <!-- </div> -->
+
+                </div>
             </div>
         </div>
+        <div class="row">
+            <br>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Clothes</h3>
+                </div>
+                <div class="panel-body">
+
+                    <!-- /.col-lg-6 -->
+                    <div class="col-lg-12" id="item-view">
+                        <div class="row">
+                            <input type="checkbox" aria-label="...">
+                            <span class="item">hi</span>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+    <div class="row" id="category-btn">
+        <div class="col-xs-4 col-xs-offset-8">
+            <a href="choose-category.html" button type="button" class="btn-default">+ Add Item</a>
+        </div>
+    </div>
 
     </div>
 
     <div class="footer navbar-fixed-bottom" id="footer"> &copy A Teeny-Tiny Crabs Production 2018</div>
 
 
+    <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
 
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+    <script type="text/javascript" src="assets/Javascript/Pack-List.js"></script>
 
 </body>
 
