--- a/Pack-List.html
+++ b/Pack-List.html
@@ -90,8 +90,8 @@
                     <!-- /.col-lg-6 -->
                     <div class="col-lg-12 categ-view Clothes" id="item-view-Clothes">
                         <div class="row">
-                            <input type="checkbox" aria-label="...">
-                            <span class="item">hi</span>
+                            <!-- <input type="checkbox" aria-label="...">
+                            <span class="item">hi</span> -->
                         </div>
 
                     </div>
@@ -107,17 +107,17 @@
                     <!-- /.col-lg-6 -->
                     <div class="col-lg-12 categ-view Toiletries" id="item-view-Toiletries">
                         <div class="row">
-                            <input type="checkbox" aria-label="...">
-                            <span class="item">hi</span>
+                            <!-- <input type="checkbox" aria-label="...">
+                            <span class="item">hi</span> -->
                         </div>
 
                     </div>
                 </div>
 
             </div>
-            
 
-            <div class="panel panel-default categ-panel empty">
+
+            <div class="panel panel-default categ-panel empty hide">
                 <div class="panel-heading">
                     <h3 class="panel-title"></h3>
                 </div>
@@ -133,15 +133,15 @@
                     </div>
                 </div>
 
+            </div>
         </div>
-    </div>
 
 
-    <div class="row" id="category-btn">
-        <div class="col-xs-4 col-xs-offset-8">
-            <a href="choose-category.html" button type="button" class="btn-default">+ Add Item</a>
+        <div class="row" id="category-btn">
+            <div class="col-xs-4 col-xs-offset-8">
+                <a href="choose-category.html" button type="button" class="btn-default">+ Add Item</a>
+            </div>
         </div>
-    </div>
 
     </div>
 
