--- a/Pack-List.html
+++ b/Pack-List.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Assistant|Pattaya|Racing+Sans+One" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="Assets/CSS/css.css">
 
     <title>Packing List</title>
@@ -18,11 +19,36 @@
             <span>Back</span>
         </a>
     </header>
-    <div class="jumbotron"> Next Trip</div>
-
-    <div class="jumbotron" id="advisor"> Trip Advisor sugesstions
-        <span>(carousel)</span>
+    <div class="jumbotron" id="home-jumbo">
+        <div class="col-md-6" id="nextTripLocation">
+            <h2> Trip Destination</h2>
+        </div>
+        <div class="col-md-6" id="nextTripName">
+            <h1> Trip Name</h1>
+        </div>
+        <div class="col-md-6" id="nextTripDate">
+            <h4>Trip start/end date</h4>
+        </div>
     </div>
+
+    <div class="jumbotron" id="weather"> Weather
+        <div class="row">
+
+            <label for="Search">City</label>
+            <input type="text" id="citySearch">
+            <br>
+            <input id="weatherSearch" type="submit" value="Weather Search">
+            <br>
+            <div class="col-xs-6">
+                <h3 id="weatherInfo"> </h3>
+            </div>
+            <div class="col-xs-6">
+                <h3 id="weatherInfo2"> </h3>
+            </div>
+            <!-- <h3 id = "weatherInfo3"> </h3>  doesn't show windspeed-->
+        </div>
+    </div>
+
 
 
     <div class="container">
@@ -85,12 +111,15 @@
 
     <div class="footer navbar-fixed-bottom" id="footer"> &copy A Teeny-Tiny Crabs Production 2018</div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="main.js"></script>
 
     <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
+        <script type="text/javascript" src="Assets/javascript/convert-temp.js"></script>
     <script type="text/javascript" src="assets/Javascript/Pack-List.js"></script>
 
 </body>
