Remove Trip Button

--- a/Pack-List.html
+++ b/Pack-List.html
@@ -20,6 +20,13 @@
     </header>
     <div class="jumbotron"> Next Trip</div>
 
+    <!-- <label for="Search">City</label> -->
+    <!-- <input type="text" id="citySearch"><br>
+    <input id="weatherSearch" type="submit" value="Weather Search"><br> -->
+    <h3 id = "weatherInfo"> </h3>
+    <h3 id = "weatherInfo2"> </h3>
+    <script src="main.js"></script>
+
     <div class="jumbotron" id="advisor"> Trip Advisor sugesstions
         <span>(carousel)</span>
     </div>
