--- a/page.html
+++ b/page.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Why does this take so long?</title>
+    <title>Remove Button</title>
 </head>
 <body>
         <input type="text" id="trip"><br>
         <input id="newButton" type="submit" value="Create Trip"><br>
-        <h3 id="line"> Hi There </h3>
-        <div id="newTrip"> </div>
+        <div class="" id="newTrip"> </div>
         
 <script
   src="http://code.jquery.com/jquery-3.3.1.slim.min.js"
