--- a/Pack-List.html
+++ b/Pack-List.html
@@ -81,39 +81,42 @@
 
         <div class="row" id="panels-view">
             <br>
+
             <div class="panel panel-default categ-panel">
                 <div class="panel-heading">
                     <h3 class="panel-title">Clothes</h3>
                 </div>
                 <div class="panel-body">
-                    <!-- /.col-lg-6 -->
                     <div class="col-lg-12 categ-view Clothes" id="item-view-Clothes">
                         <div class="row">
-                            <!-- <input type="checkbox" aria-label="...">
-                            <span class="item">hi</span> -->
                         </div>
                     </div>
                 </div>
-
             </div>
+
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title">Toiletries</h3>
                 </div>
                 <div class="panel-body">
-
-                    <!-- /.col-lg-6 -->
                     <div class="col-lg-12 categ-view Toiletries" id="item-view-Toiletries">
                         <div class="row">
-                            <!-- <input type="checkbox" aria-label="...">
-                            <span class="item">hi</span> -->
                         </div>
-
                     </div>
                 </div>
-
             </div>
 
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Electronics</h3>
+                </div>
+                <div class="panel-body">
+                    <div class="col-lg-12 categ-view Electronics" id="item-view-Electronics">
+                        <div class="row">
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="panel panel-default categ-panel empty hide">
                 <div class="panel-heading">
