adds better ui to the render and add item functions so that panels are only added to the page when they have at least 1 item in them

--- a/Pack-List.html
+++ b/Pack-List.html
@@ -23,8 +23,8 @@
     <!-- <label for="Search">City</label> -->
     <!-- <input type="text" id="citySearch"><br>
     <input id="weatherSearch" type="submit" value="Weather Search"><br> -->
-    <h3 id = "weatherInfo"> </h3>
-    <h3 id = "weatherInfo2"> </h3>
+    <h3 id="weatherInfo"> </h3>
+    <h3 id="weatherInfo2"> </h3>
 
     <div class="jumbotron" id="advisor"> Trip Advisor sugesstions
         <span>(carousel)</span>
@@ -66,7 +66,7 @@
                             <a href="#" class="set-category-btn">Medicine</a>
                         </li>
                         <li>
-                            <a href="#" class="set-category-btn">Travel Documents</a>
+                                 <a href="#" class="set-category-btn"> Documents</a>
                         </li>
                         <li>
                             <a href="#" class="set-category-btn">Shoes</a>
@@ -87,60 +87,20 @@
 
         <div class="row" id="panels-view">
             <br>
-
-            <div class="panel panel-default categ-panel">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Clothes</h3>
-                </div>
-                <div class="panel-body">
-                    <div class="col-lg-12 categ-view Clothes" id="item-view-Clothes">
-                        <div class="row">
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Toiletries</h3>
-                </div>
-                <div class="panel-body">
-                    <div class="col-lg-12 categ-view Toiletries" id="item-view-Toiletries">
-                        <div class="row">
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Electronics</h3>
-                </div>
-                <div class="panel-body">
-                    <div class="col-lg-12 categ-view Electronics" id="item-view-Electronics">
-                        <div class="row">
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="panel panel-default categ-panel empty hide">
+            <div class="panel panel-default categ-panel  hide" id="panelHTML">
                 <div class="panel-heading">
                     <h3 class="panel-title"></h3>
                 </div>
                 <div class="panel-body">
-
-                    <!-- /.col-lg-6 -->
-                    <div class="col-lg-12 categ-view empty" id="item-view-">
+                    <div class="col-lg-12 categ-view" id="item-view-">
                         <div class="row">
-                            <input type="checkbox" aria-label="...">
-                            <span class="item"></span>
+                          
                         </div>
-
                     </div>
                 </div>
 
             </div>
+
         </div>
 
 
