shows current weather for destination

--- a/Pack-List.html
+++ b/Pack-List.html
@@ -35,12 +35,12 @@
     <!-- <label for="Search">City</label> -->
     <!-- <input type="text" id="citySearch"><br>
     <input id="weatherSearch" type="submit" value="Weather Search"><br> -->
-    <h3 id="weatherInfo"> </h3>
-    <h3 id="weatherInfo2"> </h3>
+   
 
-    <!-- <div class="jumbotron" id="advisor"> Trip Advisor sugesstions
-        <span>(carousel)</span>
-    </div> -->
+    <div class="jumbotron" id="advisor"> 
+        <h3 id="weatherInfo"> </h3>
+    <h3 id="weatherInfo2"> </h3>
+    </div>
 
 
 
@@ -117,11 +117,11 @@
         </div>
 
 
-        <div class="row" id="category-btn">
+        <!-- <div class="row" id="category-btn">
             <div class="col-xs-4 col-xs-offset-8">
                 <a href="choose-category.html" button type="button" class="btn-default">+ Add Item</a>
             </div>
-        </div>
+        </div> -->
 
     </div>
 
@@ -139,6 +139,7 @@
         crossorigin="anonymous"></script>
       
     <script type="text/javascript" src="assets/Javascript/Pack-List.js"></script>
+    <script type="text/javascript" src="assets/Javascript/particles.js"></script>
    
 
 
