--- a/Pack-List.html
+++ b/Pack-List.html
@@ -16,6 +16,7 @@
 
 <body>
     <header>
+            <a href="Trip-List.html"> <img src="Assets/Images/packlistlogo.png" alt="Trip Buddy" id="logo-header"/></a>
         <a href="Trip-List.html"> <button class="add-item-btn" role="button">
             <span>Back</span></button>
         </a>
