--- a/choose-category.html
+++ b/choose-category.html
@@ -74,16 +74,6 @@
                                     </a>
                                 </div>
 
-<<<<<<< HEAD
-                </div>
-        
-            </form>
-            <div class="col-md-6">
-                        <a href="Pack-List.html"><button id="next-btn" class=" btn btn-default"> Next</button></a>
-                </div>
-        </div>
-        </div>
-=======
                         </div>
 
 
@@ -97,7 +87,6 @@
                         </a>
                     </div>
             </div>
->>>>>>> c0772a6e95d395abdb3ad5c7fc1a5136f899cfeb
 
         </div>
 
@@ -105,7 +94,7 @@
 
 
 
-        <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
             crossorigin="anonymous"></script>
         <script type="text/javascript" src="assets/javascript/javascript.js"></script>
 
