fixes html so packing list form works

--- a/Pack-List.html
+++ b/Pack-List.html
@@ -26,44 +26,40 @@
         </a>
     </header>
     <div class="jumbotron" id="jumbo" style=>
-
         <div class="col-xs-12" id="nextTripName">
             <h1 id="trip-name"> Trip Name</h1>
         </div>
-        <!-- 
+
         <div class="col-xs-12" id="nextTripLocation">
             <h2 id="destination"></h2>
         </div>
 
         <div class="col-xs-12" id="nextTripDate">
-            <h4 id="date">Trip start/end date</h4>
+            <h4 id="date"></h4>
         </div>
-     -->
     </div>
+
     <!-- <label for="Search">City</label> -->
     <!-- <input type="text" id="citySearch"><br>
     <input id="weatherSearch" type="submit" value="Weather Search"><br> -->
 
-    <div class="jumbotron" id="weather">
-        <!-- <div class="weather rain" style=> -->
 
-            <div class="row" id="weather-div">
-                <div class="col-xs-12">
-                    <h3 id="weatherInfo"> </h3>
-                </div>
-            </div>
-        </div>
-    
-    <div class="row" id="edit">
-        <!-- <button><span class="glyphicons glyphicons-pencil" aria-hidden="true"></span></button> -->
-                
+    <div class="jumbotron" id="weather">
+        <h3 id="weatherInfo"> </h3>
     </div>
 
-    <div class="row" id="pack-list-bg">
-        <div class="container">
+    <div class="row" id="edit">
+        <!-- <button><span class="glyphicons glyphicons-pencil" aria-hidden="true"></span></button> -->
+
+    </div>
+
+
+
+    <div class="container" id="pack-list-bg">
+        <div class="row">
             <h3 id="trip-list-header"> Trip Packing List</h3>
-            <div class="row" id="pack-list-nestle">
-                <div class="col-xs-9 input-group" id="input-div">
+            <div class="row" >
+                <div class="col-xs-12 input-group">
                     <!-- INPUT ITEM FORM FIELD: -->
                     <input type="text" class="form-control" aria-label="..." id="item-input">
 
@@ -72,8 +68,7 @@
                         <!-- <button type="button" class="btn btn-default">Action</button> -->
 
                         <!--SELECTED CATEGORY BUTTON  -->
-                        <button id="dropdwn-btn" type="button" class="btn btn-default " data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                            id="categ-dropdown-btn">Clothes
+                        <button type="button" class="btn btn-default " data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="categ-dropdown-btn">Clothes
                             <span class="caret"></span>
                         </button>
 
@@ -91,26 +86,8 @@
                                     Add category... </a>
                             </li>
                         </ul>
-
-
+                        <!-- </div> -->
                     </div>
-                </div>
-                <div class="row" id="panels-view">
-                    <br>
-                    <div class="panel panel-default categ-panel  hide" id="panelHTML">
-                        <div id="panel-heading">
-                            <h3 class="panel-title"></h3>
-                        </div>
-                        <div class="panel-body">
-                            <div class="col-lg-12 categ-view" id="item-view-">
-                                <div class="row">
-
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-
                 </div>
             </div>
         </div>
@@ -141,7 +118,7 @@
             </div>
         </div>
 
-        <!-- <div class="row" id="panels-view">
+        <div class="row" id="panels-view">
             <br>
             <div class="panel panel-default categ-panel  hide" id="panelHTML">
                 <div id="panel-heading">
@@ -157,7 +134,7 @@
 
             </div>
 
-        </div> -->
+        </div>
 
 
         <!-- <div class="row" id="category-btn">
@@ -166,7 +143,6 @@
             </div>
         </div> -->
 
-    </div>
     </div>
 
     <div class="footer navbar-fixed-bottom" id="footer"> &copy A Teeny-Tiny Crabs Production 2018</div>
